examples/invalid/example6_duplicate_function_name.py
def is_positive(a: int) -> bool:
    return a > 0

def is_positive(b: int) -> bool:
    return b > 0
